# log-derive

./: .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: fibonacci.rs  result.rs  test_log_ts.rs  timestamps.rs
src/: async_closure.rs  generate_function.rs  generate_function_async.rs  lib.rs  non_async_closure.rs
test_async/: Cargo.toml
test_async/examples/: fibonacci.rs  timestamps.rs
tests/: first.rs  test_async.rs  test_logger.rs
