[package]
name = "log-derive"
version = "0.4.0"
license = "MIT/Apache-2.0"
authors = ["Elichai <elichai.turkel@gmail.com>"]
repository = "https://github.com/elichai/log-derive"
readme = "README.md"
edition = "2018"
description = "Procedural Macros for logging the result and inputs of a function"
categories = ["development-tools::debugging"]
keywords = ["log", "macro", "derive", "logging", "function"]
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
darling = "0.10.0"
proc-macro2 = "1.0.3"
#syn = { version = "0.15", features = ["full", "extra-traits"] } # -> For development
syn = { version = "1.0.5", features = ["full"] }
quote = "1.0.2"

[dev-dependencies]
simplelog = "0.7"
log = "0.4"

[badges]
travis-ci = { repository = "elichai/log-derive" }

[lib]
proc-macro = true