[package]
name = "async_test"
version = "0.1.0"
authors = ["Jason Mobarak <jason@swiftnav.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log-derive = { path = ".." }

[dev-dependencies]
tokio = "0.2"
simplelog = "0.7"
log = "0.4"
